--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <script>
   const params = new URLSearchParams(window.location.search);
-  const id = params.get("id");
+  const id = params.get("rid");
   const baseUrl = "https://wenb-ledennet.nl";
   const targetUrl = id ? `${baseUrl}?rid=${encodeURIComponent(id)}` : baseUrl;
   location = targetUrl;
