--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <script>
   const params = new URLSearchParams(window.location.search);
   const id = params.get("rid");
-  const baseUrl = "https://wenb-ledennet.nl";
+  const baseUrl = "https://test.nl";
   const targetUrl = id ? `${baseUrl}?rid=${encodeURIComponent(id)}` : baseUrl;
   location = targetUrl;
 </script>
